<resources>
    <string name="app_name">Medical research dream</string>
    <string name="bt_Item_bank">题库</string>
    <string name="bt_Shopping_Mall">商城</string>
    <string name="bt_curriculum">课程</string>
    <string name="bt_forum">论坛</string>
    <string name="bt_my">我</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_LiNian">历年真题</string>
    <string name="app_moni">模拟考试</string>
    <string name="app_tikucuo">题库错题</string>
    <string name="app_zhenzhizhuanzu">政治专注</string>
    <string name="app_zhiyeyeti">执业医题</string>
    <string name="app_tikusoucang">题库收藏</string>
    <string name="app_linianzhenti">历年真题</string>
    <string name="app_yixeukaoti">医学考题</string>
    <string name="app_hialiang">海量专业习题库</string>
    <string name="app_daka">今日打卡</string>
    <string name="bt_shiping">视频</string>
    <string name="bt_tushu">图书</string>
    <string name="bt_quanbu">全部</string>
    <string name="app_denlu">登陆</string>
    <string name="app_zhifu">待支付</string>
    <string name="app_daishougou">待收货</string>
    <string name="app_daipingjia">待评价</string>
    <string name="app_dindan">订单</string>
    <string name="app_dingdan">全部订单</string>
    <string name="app_jishu">技术支持</string>
    <string name="app_lianxi">联系客服</string>
    <string name="app_zaixian">在线咨询</string>
    <string name="app_guanyu">关于我们</string>
    <string name="app_lixian">离线缓存</string>
    <string name="app_shiping">视频记录</string>
    <string name="app_shouhuo">收货地址</string>
    <string name="app_gowuche">购物车</string>
    <string name="app_shoucang">我的收藏</string>
    <string name="app_ke">课程</string>
    <string name="app_tiaoguo">跳过</string>
    <string name="app_zhanghaoa">账号密码登录</string>
    <string name="app_shouji">手机号快速登陆</string>
    <string name="app_qingshu">请输入用户名/手机号</string>
    <string name="app_mi">请输入密码</string>
    <string name="app_wangji">忘记密码</string>
    <string name="app_yonghu">用户注册</string>
    <string name="app_huoqu">获取验证码</string>

</resources>
