<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".view.danglu.ZhanghaoFragment">


    <EditText
        android:id="@+id/et_zhang"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_width="@dimen/dp_300"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:hint="@string/app_qingshu"/>


    <EditText
        android:layout_marginTop="@dimen/dp_20"
        android:layout_width="@dimen/dp_300"
        android:hint="@string/app_mi"
        android:padding="@dimen/dp_10"
        android:layout_height="wrap_content" />


    <Button
        android:layout_width="@dimen/dp_280"
        android:layout_height="wrap_content"
        android:background="@drawable/denglu"
        android:text="@string/app_denlu"
        android:textSize="@dimen/dp_20"
        android:textColor="@color/cardview_light_background"
        android:layout_marginTop="@dimen/dp_50"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_15">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:layout_marginLeft="@dimen/dp_130"
        android:text="@string/app_wangji"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:layout_marginLeft="@dimen/dp_10"
            android:text=" | "/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/arrow_color"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/app_yonghu"/>
</LinearLayout>
</LinearLayout>