<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.danglu.ShoujiFragment">

    <TextView
        android:layout_width="@dimen/dp_290"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/Black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_30"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+86  |"
                android:layout_marginTop="@dimen/dp_2"
                android:textColor="@color/colorblue"
                android:textSize="@dimen/dp_16" />


            <EditText
                android:id="@+id/et_zhang"
                android:layout_width="@dimen/dp_250"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:paddingLeft="@dimen/dp_10"
                android:hint="@string/app_qingshu"
                />
        </LinearLayout>

        <EditText
            android:layout_width="@dimen/dp_300"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/app_mi"
            android:padding="@dimen/dp_10" />


        <Button
            android:layout_width="@dimen/dp_280"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_50"
            android:background="@drawable/denglu"
            android:text="@string/app_denlu"
            android:textColor="@color/cardview_light_background"
            android:textSize="@dimen/dp_20" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_210"
                android:text="@string/app_yonghu"
                android:textColor="@color/arrow_color" />

        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="8dp"
        android:text="|"
        android:textColor="@color/Black"
        android:textSize="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/app_huoqu"
        android:textColor="@color/colorblue"
        android:textSize="@dimen/dp_15"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3" />
</androidx.constraintlayout.widget.ConstraintLayout>