<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.shopping_Mall.ShoppingMallFragment">


    <TextView
        android:id="@+id/te_im"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_180"
        android:background="@color/colorblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/im"
        android:layout_width="@dimen/dp_300"
        android:layout_height="160dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorblue"
        android:scaleType="fitXY"
        android:src="@mipmap/beijing_moni"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/te_im"
        app:layout_constraintVertical_bias="0.118" />


    <RadioGroup
        android:id="@+id/rgp"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/bt_quanbu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/rb6"
            android:gravity="center"
            android:text="@string/bt_quanbu"
            android:textColor="@color/colorblues"
            android:textSize="@dimen/dp_15" />

        <RadioButton
            android:id="@+id/bt_tushu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/rb7"
            android:gravity="center"
            android:text="@string/bt_tushu"
            android:textColor="@color/colorblues"
            android:textSize="@dimen/dp_15" />

        <RadioButton
            android:id="@+id/bt_shiping"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_1"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/rb8"
            android:gravity="center"
            android:text="@string/bt_shiping"
            android:textColor="@color/colorblues"
            android:textSize="@dimen/dp_15" />

    </RadioGroup>

    <FrameLayout
        android:id="@+id/fl_we"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgp"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>